# lore_core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  deny.toml  diesel.toml  example.db  generate_changelog.sh  generate_changelog_diff.sh  install_build_dependencies_linux.sh  install_build_dependencies_macos.sh  install_build_dependencies_windows.bat  install_runtime_dependencies_linux.sh  lorecore_api.h  loretex_api.h
.github/workflows/: _build.yml  _runner_setup.yml  _test_executability.yml  _test_loadability.yml  _tests.yml  _upload_artifacts.yml  build_debug.yml  build_release_binaries.yml  check_for_updates.yml  check_if_changelogs_were_updated.yml  cross_compile.yml  debug_build.yml  regular_build.yml  regular_tests.yml  release_binaries.yml  run_tests.yml  rust.yml  test.yml  test_lua.yml  test_release.yml
changelogs/: get_current.sh  v0.0.0.md
scripts/: ffitest.lua  get_coverage.sh  install_build_dependencies_linux.sh  install_build_dependencies_macos.sh  install_build_dependencies_windows.bat  install_dev_dependencies_linux.sh  install_dev_tools_linux.sh  install_dev_tools_posix.sh  install_dev_tools_windows.bat  install_lua_dependencies_linux.sh  install_lua_dependencies_macos.sh  install_lua_dependencies_windows.bat  install_runtime_dependencies_linux.sh  load_lib.lua  load_lib.py  load_python.py  update_c_api.sh  update_diesel_schema.sh
src/: errors.rs  extractions.rs  lib.rs  main.rs  timestamp.rs
src/api/: aux.rs  auxil.rs  (+5 more)
tests/: c_api.py  c_api.rs  entitiy.rs  entity.rs  history.rs  lore_database.rs  relationships.rs
(+73 files in other folders)
