[package]
name = "loregui"
version = "0.1.0"
edition = "2021"

[lib]
name         = "lorecore"
crate-type   = ["rlib", "cdylib"]

[dependencies]
diesel = {version = "2.0.3", features = ["sqlite"]}
diesel_migrations = {version = "2.0.0"}
libc = "0.2.140" # types for C api
iced = { version = "0.10.0", features=["lazy"] }
iced_aw = { version = "0.7.0", default-features = false, features = ["card", "modal", "selection_list"] }
preferences = {version = "1.1.0"}
rfd = "0.11.3" # file dialogs
rusqlite = { version = "0.29.0", features = ["bundled"] }

[build-dependencies]
cbindgen = "0.25.0"
