[package]
name = "lorecore"
version = "0.1.0"
edition = "2021"

[lib]
name         = "lorecore"
crate-type   = ["rlib", "cdylib"]

[dependencies]
diesel = {version = "2.0.3", features = ["sqlite"]}
diesel_migrations = {version = "2.0.0"}
libc = "0.2.140" # types for C api
rusqlite = { version = "0.29.0", features = ["bundled"] }

[build-dependencies]
cbindgen = "0.26.0"

[dev-dependencies]
tempfile = "3.8.0"
