[package]
name = "lorecore"
version = "0.1.0"
edition = "2021"

[lib]
name         = "lorecore"
crate-type   = ["rlib", "cdylib"]

[dependencies]
diesel = {version = "2.0", features = ["sqlite"]}
diesel_migrations = {version = "2.0"}
libc = "0.2.140" # types for C api
rusqlite = { version = "0.30.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"
